--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,6 @@
     "typescript": ">=3.8.0",
     "webpack": "^4.46.0"
   },
-  "author": "Ivan Mushketyk",
+  "author": "chekwas88",
   "license": "MIT"
 }
